# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast  pyproject.toml  запись.cast
brain_games/: game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain-calc  brain-even  brain_even.py  brain_games.py  brain_gcd.py  brain_progression.py  game_engine.py  main.py
