[project]
name = "hexlet-code"
version = "0.1.0"
description = "A set of console-based brain-training games"
authors = [{ name = "Sergei", email = "spoddub@hey.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"